change GH action to use matrix of ruby versions
also changes name of action file to `ci.yml` and name of action to "CI"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Ruby
+name: CI
 
 on:
   push:
@@ -8,13 +8,13 @@ on:
   pull_request:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     name: Ruby ${{ matrix.ruby }}
     strategy:
+      fail-fast: false
       matrix:
-        ruby:
-          - '3.1.2'
+        ruby: ["2.6", "2.7", "3.0", "3.1"]
 
     steps:
     - uses: actions/checkout@v3
@@ -23,5 +23,5 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - name: Run the default task
+    - name: Run tests and lint
       run: bundle exec rake
